# zero2prod

./: .gitignore  Cargo.toml  configuration.yaml
.github/workflows/: rust.yml
migrations/: 20250621105719_create_subscriptions_table.up.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tests/fixtures/: subscriptions.sql
