[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
serde_with = "3.12.0"
config = "0.15.11"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
time = { version = "0.3.41", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
postgres = { version = "0.19.10" }
env_logger = "0.11.8"
log = "0.4.8"
derive_more = "2.0.1"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "time",
  "chrono",
  "migrate",
]
